more design files

--- a/design/app/builder-step-5.html
+++ b/design/app/builder-step-5.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Takeoff</title>
-		<link rel="stylesheet" href="styles/main.css">
-		<link rel="shortcut icon" href="favicon.ico">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	</head>
 
-	<body>
+<head>
+	<meta charset="UTF-8">
+	<title>Takeoff</title>
+	<link rel="stylesheet" href="styles/main.css">
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+</head>
+
+<body>
 	<header class="small">
 		<nav>
 			<div class="container">
@@ -26,85 +27,87 @@
 	</header>
 
 	<div class="wrapper">
-	<section class="sub-menu">
-		<h1><a href="#"><i class="fa fa-bars"></i>Brewr</a></h1>
+		<section class="sub-menu">
+			<h1><a href="#"><i class="fa fa-bars"></i>Brewr</a></h1>
 
-		<ul>
-			<li>
-				<a href="#"><i class="fa fa-home"></i>Dashboard</a>
-			</li>
+			<ul>
+				<li>
+					<a href="#"><i class="fa fa-home"></i>Dashboard</a>
+				</li>
 
-			<li>
-				<a href="#"><i class="fa fa-group"></i>Teams</a>
-			</li>
+				<li>
+					<a href="#"><i class="fa fa-group"></i>Teams</a>
+				</li>
 
-			<li class="second-level">
-				<a href="#">
-					<i class="fa fa-folder"></i>Projects
-					<i class="fa fa-caret-down item-dropdown"></i>
-				</a>
+				<li class="second-level">
+					<a href="#">
+						<i class="fa fa-folder"></i>Projects
+						<i class="fa fa-caret-down item-dropdown"></i>
+					</a>
 
-				<div class="clear"></div>
+					<div class="clear"></div>
 
-				<ul>
-					<li><a href="#">Google Inbox</a></li>
-					<li><a href="#">Google Analytics</a></li>
-					<li><a href="#">Google Drive</a></li>
-				</ul>
-			</li>
-			<li class="active">
-				<a href="#"><i class="fa fa-gears"></i>Image Creator</a>
-			</li>
-			<li>
-				<a href="#"><i class="fa fa-lock"></i>Admin</a>
-			</li>
-		</ul>
-	</section>
+					<ul>
+						<li><a href="#">Google Inbox</a></li>
+						<li><a href="#">Google Analytics</a></li>
+						<li><a href="#">Google Drive</a></li>
+					</ul>
+				</li>
+				<li class="active">
+					<a href="#"><i class="fa fa-gears"></i>Image Creator</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-lock"></i>Admin</a>
+				</li>
+			</ul>
+		</section>
 
 
-	<section class="page-title">
-		<h1>Image Builder <span id="step">5/7</span></h1>
-	</section>
+		<section class="page-title">
+			<h1>Image Builder
+				<span id="step">5/7</span>
+			</h1>
+		</section>
 
-	<section class="padding center content flex-container">
-		<div class="container">
-			<!-- Add Volumes -->
-			<section class="sub-content flex-container">
-				<div class="flex-container">
-					<div id="pick-settings" class="flex-item">
-						<label for="input_cmd">Add Volumes</label>
-						<input type="text" name="input_cmd" placeholder="Type a volume, format: /data..." />
+		<section class="padding center content flex-container">
+			<div class="container">
+				<!-- Add Volumes -->
+				<section class="sub-content flex-container">
+					<div class="flex-container">
+						<div id="pick-settings" class="flex-item">
+							<label for="input_cmd">Add Volumes</label>
+							<input type="text" name="input_cmd" placeholder="Type a volume, format: /data..." />
+						</div>
 					</div>
-				</div>
-			</section>
+				</section>
 
-			<!-- Current Volumes -->
-            <section class="sub-content flex-container">
-                <div class="flex-container">
-                    <div id="pick-settings-filled" class="flex-item">
-    					<h2>Volumes</h2>
+				<!-- Current Volumes -->
+				<section class="sub-content flex-container">
+					<div class="flex-container">
+						<div id="pick-settings-filled" class="flex-item">
+							<h2>Volumes</h2>
 
-    					<ul>
-                            <li>
-    							/data
-    							<a href="#" class="btn-square orange"><i class="fa fa-remove"></i></a>
-    						</li>
-                            <li>
-    							/logs
-    							<a href="#" class="btn-square orange"><i class="fa fa-remove"></i></a>
-    						</li>
-    					</ul>
-                    </div>
-                </div>
-            </section>
+							<ul>
+								<li>
+									/data
+									<a href="#" class="btn-square orange"><i class="fa fa-remove"></i></a>
+								</li>
+								<li>
+									/logs
+									<a href="#" class="btn-square orange"><i class="fa fa-remove"></i></a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</section>
 
-			<!-- Next Button -->
-			<a href="builder-step-6.html" class="btn orange">Next ></a>
-		</div>
+				<!-- Next Button -->
+				<a href="builder-step-6.html" class="btn orange">Next ></a>
+			</div>
 
-		<div class="clear"></div>
-	</section>
-</div>
+			<div class="clear"></div>
+		</section>
+	</div>
 
 	<footer>
 		<div class="container">
@@ -133,5 +136,6 @@
 			</div>
 		</div>
 	</footer>
-	</body>
+</body>
+
 </html>
