--- a/design/app/dashboard-company.html
+++ b/design/app/dashboard-company.html
@@ -64,45 +64,41 @@
 
 
 		<section class="page-title">
-			<h1>Image Builder
-				<span id="step">5/7</span>
-			</h1>
+			<h1>Your Organisation</h1>
 		</section>
 
 		<section class="padding center content flex-container">
 			<div class="container">
-				<!-- Add Volumes -->
-				<section class="sub-content flex-container">
+				<!-- Select image from docker -->
+				<section class="sub-content">
+					<h1>Statistics</h1>
+
 					<div class="flex-container">
-						<div id="pick-settings" class="flex-item">
-							<label for="input_cmd">Add Environment Variables</label>
-							<input type="text" name="input_cmd" placeholder="Type a environment variable, format: ENV_VARIABLE=value" />
+						<div class="flex-item pick-image-block">
+							<h1>Ubuntu</h1>
+						</div>
+
+						<div class="flex-item pick-image-block">
+							<h1>Ubuntu</h1>
+						</div>
+
+						<div class="flex-item pick-image-block">
+							<h1>Ubuntu</h1>
+						</div>
+
+						<div class="flex-item pick-image-block">
+							<h1>Ubuntu</h1>
+						</div>
+
+						<div class="flex-item pick-image-block">
+							<h1>Ubuntu</h1>
+						</div>
+
+						<div class="flex-item pick-image-block">
+							<h1>Ubuntu</h1>
 						</div>
 					</div>
 				</section>
-
-				<!-- Current Volumes -->
-				<section class="sub-content flex-container">
-					<div class="flex-container">
-						<div id="pick-settings-filled" class="flex-item">
-							<h2>Environment Variables</h2>
-
-							<ul>
-								<li>
-									ENVIRONMENT=staging
-									<a href="#" class="btn-square orange"><i class="fa fa-remove"></i></a>
-								</li>
-								<li>
-									TEST=test123
-									<a href="#" class="btn-square orange"><i class="fa fa-remove"></i></a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</section>
-
-				<!-- Next Button -->
-				<a href="builder-step-7.html" class="btn orange">Next ></a>
 			</div>
 
 			<div class="clear"></div>
