--- a/design/app/index.html
+++ b/design/app/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Takeoff</title>
-		<link rel="stylesheet" href="styles/main.css">
-		<link rel="shortcut icon" href="favicon.ico">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	</head>
 
-	<body>
+<head>
+	<meta charset="UTF-8">
+	<title>Takeoff</title>
+	<link rel="stylesheet" href="styles/main.css">
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+</head>
+
+<body>
 	<header>
 		<nav>
 			<div class="container">
@@ -101,7 +102,8 @@
 			<div class="row" id="comparison">
 				<div class="col-md-5">
 					<img src="images/before.png" height="56">
-					<h4><strong>Before:</strong> manual install</h4>
+					<h4>
+						<strong>Before:</strong> manual install</h4>
 					<p>Expensive engineer time wasted on babysitting the installation.</p>
 				</div>
 
@@ -113,8 +115,10 @@
 
 				<div class="col-md-5">
 					<img src="images/after.png" height="56">
-					<h4><strong class="success">After:</strong> Takeoff install</h4>
-					<p>One click and a coffee break.<br>Let Takeoff do the hard work.</p>
+					<h4>
+						<strong class="success">After:</strong> Takeoff install</h4>
+					<p>One click and a coffee break.
+						<br>Let Takeoff do the hard work.</p>
 				</div>
 			</div>
 		</div>
@@ -169,7 +173,9 @@
 					<div class="plan">
 						<p class="title">Organization</p>
 						<p class="subtitle">Multiple developers</p>
-						<div class="price success">$ 3.99 <small>per user/month</small></div>
+						<div class="price success">$ 3.99
+							<small>per user/month</small>
+						</div>
 
 						<div class="padding-half">
 							<ul>
@@ -241,5 +247,6 @@
 			</div>
 		</div>
 	</footer>
-	</body>
+</body>
+
 </html>
