--- a/design/app/builder-step-1.html
+++ b/design/app/builder-step-1.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Takeoff</title>
-		<link rel="stylesheet" href="styles/main.css">
-		<link rel="shortcut icon" href="favicon.ico">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	</head>
 
-	<body>
+<head>
+	<meta charset="UTF-8">
+	<title>Takeoff</title>
+	<link rel="stylesheet" href="styles/main.css">
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+</head>
+
+<body>
 	<header class="small">
 		<nav>
 			<div class="container">
@@ -26,122 +27,124 @@
 	</header>
 
 	<div class="wrapper">
-	<section class="sub-menu">
-		<h1><a href="#"><i class="fa fa-bars"></i>Brewr</a></h1>
+		<section class="sub-menu">
+			<h1><a href="#"><i class="fa fa-bars"></i>Brewr</a></h1>
 
-		<ul>
-			<li>
-				<a href="#"><i class="fa fa-home"></i>Dashboard</a>
-			</li>
+			<ul>
+				<li>
+					<a href="#"><i class="fa fa-home"></i>Dashboard</a>
+				</li>
 
-			<li>
-				<a href="#"><i class="fa fa-group"></i>Teams</a>
-			</li>
+				<li>
+					<a href="#"><i class="fa fa-group"></i>Teams</a>
+				</li>
 
-			<li class="second-level">
-				<a href="#">
-					<i class="fa fa-folder"></i>Projects
-					<i class="fa fa-caret-down item-dropdown"></i>
-				</a>
+				<li class="second-level">
+					<a href="#">
+						<i class="fa fa-folder"></i>Projects
+						<i class="fa fa-caret-down item-dropdown"></i>
+					</a>
 
-				<div class="clear"></div>
+					<div class="clear"></div>
 
-				<ul>
-					<li><a href="#">Google Inbox</a></li>
-					<li><a href="#">Google Analytics</a></li>
-					<li><a href="#">Google Drive</a></li>
-				</ul>
-			</li>
-			<li class="active">
-				<a href="#"><i class="fa fa-gears"></i>Image Creator</a>
-			</li>
-			<li>
-				<a href="#"><i class="fa fa-lock"></i>Admin</a>
-			</li>
-		</ul>
-	</section>
+					<ul>
+						<li><a href="#">Google Inbox</a></li>
+						<li><a href="#">Google Analytics</a></li>
+						<li><a href="#">Google Drive</a></li>
+					</ul>
+				</li>
+				<li class="active">
+					<a href="#"><i class="fa fa-gears"></i>Image Creator</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-lock"></i>Admin</a>
+				</li>
+			</ul>
+		</section>
 
 
-	<section class="page-title">
-		<h1>Image Builder <span id="step">1/7</span></h1>
-	</section>
+		<section class="page-title">
+			<h1>Image Builder
+				<span id="step">1/7</span>
+			</h1>
+		</section>
 
-	<section class="padding center content flex-container">
-		<div class="container">
+		<section class="padding center content flex-container">
+			<div class="container">
 
-			<!-- Select image from docker -->
-			<section class="sub-content">
-				<h1>Pick your base image</h1>
+				<!-- Select image from docker -->
+				<section class="sub-content">
+					<h1>Pick your base image</h1>
 
-				<div class="flex-container">
-					<div class="flex-item pick-image-block">
-						<h1>Ubuntu</h1>
-						<img src="http://summit.ubuntu.com/media/images/cof_orange_hex1.png" />
-						<select>
-							<option value="">v15.04 - Vilvid Vervet</option>
-						</select>
+					<div class="flex-container">
+						<div class="flex-item pick-image-block">
+							<h1>Ubuntu</h1>
+							<img src="http://summit.ubuntu.com/media/images/cof_orange_hex1.png" />
+							<select>
+								<option value="">v15.04 - Vilvid Vervet</option>
+							</select>
+						</div>
+
+						<div class="flex-item pick-image-block">
+							<h1>Ubuntu</h1>
+							<img src="http://summit.ubuntu.com/media/images/cof_orange_hex1.png" />
+							<select>
+								<option value="">v15.04 - Vilvid Vervet</option>
+							</select>
+						</div>
+
+						<div class="flex-item pick-image-block">
+							<h1>Ubuntu</h1>
+							<img src="http://summit.ubuntu.com/media/images/cof_orange_hex1.png" />
+							<select>
+								<option value="">v15.04 - Vilvid Vervet</option>
+							</select>
+						</div>
+
+						<div class="flex-item pick-image-block">
+							<h1>Ubuntu</h1>
+							<img src="http://summit.ubuntu.com/media/images/cof_orange_hex1.png" />
+							<select>
+								<option value="">v15.04 - Vilvid Vervet</option>
+							</select>
+						</div>
+
+						<div class="flex-item pick-image-block">
+							<h1>Ubuntu</h1>
+							<img src="http://summit.ubuntu.com/media/images/cof_orange_hex1.png" />
+							<select>
+								<option value="">v15.04 - Vilvid Vervet</option>
+							</select>
+						</div>
+
+						<div class="flex-item pick-image-block">
+							<h1>Ubuntu</h1>
+							<img src="http://summit.ubuntu.com/media/images/cof_orange_hex1.png" />
+							<select>
+								<option value="">v15.04 - Vilvid Vervet</option>
+							</select>
+						</div>
 					</div>
+				</section>
 
-					<div class="flex-item pick-image-block">
-						<h1>Ubuntu</h1>
-						<img src="http://summit.ubuntu.com/media/images/cof_orange_hex1.png" />
-						<select>
-							<option value="">v15.04 - Vilvid Vervet</option>
-						</select>
+				<!-- Search docker -->
+				<section class="sub-content">
+					<h1>Or search Docker Hub</h1>
+
+					<div class="flex-container">
+						<div class="flex-item pick-image-search">
+							<input type="text" placeholder="Type a keyword..." />
+						</div>
 					</div>
+				</section>
 
-					<div class="flex-item pick-image-block">
-						<h1>Ubuntu</h1>
-						<img src="http://summit.ubuntu.com/media/images/cof_orange_hex1.png" />
-						<select>
-							<option value="">v15.04 - Vilvid Vervet</option>
-						</select>
-					</div>
+				<!-- Next Button -->
+				<a href="builder-step-2.html" class="btn orange">Next ></a>
+			</div>
 
-					<div class="flex-item pick-image-block">
-						<h1>Ubuntu</h1>
-						<img src="http://summit.ubuntu.com/media/images/cof_orange_hex1.png" />
-						<select>
-							<option value="">v15.04 - Vilvid Vervet</option>
-						</select>
-					</div>
-
-					<div class="flex-item pick-image-block">
-						<h1>Ubuntu</h1>
-						<img src="http://summit.ubuntu.com/media/images/cof_orange_hex1.png" />
-						<select>
-							<option value="">v15.04 - Vilvid Vervet</option>
-						</select>
-					</div>
-
-					<div class="flex-item pick-image-block">
-						<h1>Ubuntu</h1>
-						<img src="http://summit.ubuntu.com/media/images/cof_orange_hex1.png" />
-						<select>
-							<option value="">v15.04 - Vilvid Vervet</option>
-						</select>
-					</div>
-				</div>
-			</section>
-
-			<!-- Search docker -->
-			<section class="sub-content">
-				<h1>Or search Docker Hub</h1>
-
-				<div class="flex-container">
-					<div class="flex-item pick-image-search">
-						<input type="text" placeholder="Type a keyword..." />
-					</div>
-				</div>
-			</section>
-
-			<!-- Next Button -->
-			<a href="builder-step-2.html" class="btn orange">Next ></a>
-		</div>
-
-		<div class="clear"></div>
-	</section>
-</div>
+			<div class="clear"></div>
+		</section>
+	</div>
 
 	<footer>
 		<div class="container">
@@ -170,5 +173,6 @@
 			</div>
 		</div>
 	</footer>
-	</body>
+</body>
+
 </html>
