--- a/design/app/builder-step-3.html
+++ b/design/app/builder-step-3.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Takeoff</title>
-		<link rel="stylesheet" href="styles/main.css">
-		<link rel="shortcut icon" href="favicon.ico">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	</head>
 
-	<body>
+<head>
+	<meta charset="UTF-8">
+	<title>Takeoff</title>
+	<link rel="stylesheet" href="styles/main.css">
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+</head>
+
+<body>
 	<header class="small">
 		<nav>
 			<div class="container">
@@ -26,102 +27,101 @@
 	</header>
 
 	<div class="wrapper">
-	<section class="sub-menu">
-		<h1><a href="#"><i class="fa fa-bars"></i>Brewr</a></h1>
+		<section class="sub-menu">
+			<h1><a href="#"><i class="fa fa-bars"></i>Brewr</a></h1>
 
-		<ul>
-			<li>
-				<a href="#"><i class="fa fa-home"></i>Dashboard</a>
-			</li>
+			<ul>
+				<li>
+					<a href="#"><i class="fa fa-home"></i>Dashboard</a>
+				</li>
 
-			<li>
-				<a href="#"><i class="fa fa-group"></i>Teams</a>
-			</li>
+				<li>
+					<a href="#"><i class="fa fa-group"></i>Teams</a>
+				</li>
 
-			<li class="second-level">
-				<a href="#">
-					<i class="fa fa-folder"></i>Projects
-					<i class="fa fa-caret-down item-dropdown"></i>
-				</a>
+				<li class="second-level">
+					<a href="#">
+						<i class="fa fa-folder"></i>Projects
+						<i class="fa fa-caret-down item-dropdown"></i>
+					</a>
 
-				<div class="clear"></div>
+					<div class="clear"></div>
 
-				<ul>
-					<li><a href="#">Google Inbox</a></li>
-					<li><a href="#">Google Analytics</a></li>
-					<li><a href="#">Google Drive</a></li>
-				</ul>
-			</li>
-			<li class="active">
-				<a href="#"><i class="fa fa-gears"></i>Image Creator</a>
-			</li>
-			<li>
-				<a href="#"><i class="fa fa-lock"></i>Admin</a>
-			</li>
-		</ul>
-	</section>
+					<ul>
+						<li><a href="#">Google Inbox</a></li>
+						<li><a href="#">Google Analytics</a></li>
+						<li><a href="#">Google Drive</a></li>
+					</ul>
+				</li>
+				<li class="active">
+					<a href="#"><i class="fa fa-gears"></i>Image Creator</a>
+				</li>
+				<li>
+					<a href="#"><i class="fa fa-lock"></i>Admin</a>
+				</li>
+			</ul>
+		</section>
 
 
-	<section class="page-title">
-		<h1>Image Builder <span id="step">3/7</span></h1>
-	</section>
+		<section class="page-title">
+			<h1>Image Builder
+				<span id="step">3/7</span>
+			</h1>
+		</section>
 
-	<section class="padding center content flex-container">
-		<div class="container">
-			<!-- Add Command -->
-            <section class="sub-content flex-container">
-                <div class="flex-container">
-                    <div id="pick-settings" class="flex-item">
-						<label for="input_cmd">Add Command</label>
-                        <input type="text" name="input_cmd" placeholder="Type a command..." />
-                    </div>
-                </div>
-            </section>
+		<section class="padding center content flex-container">
+			<div class="container">
+				<!-- Add Command -->
+				<section class="sub-content flex-container">
+					<div class="flex-container">
+						<div id="pick-settings" class="flex-item">
+							<label for="input_cmd">Add Command</label>
+							<input type="text" name="input_cmd" placeholder="Type a command..." />
+						</div>
+					</div>
+				</section>
 
-			<!-- Current Command -->
-            <section class="sub-content flex-container">
-                <div class="flex-container">
-                    <div class="help_block"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
+				<!-- Current Command -->
+				<section class="sub-content flex-container">
+					<div class="flex-container">
+						<div class="help_block"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+							dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
 
-                    <div id="pick-settings-filled" class="flex-item">
-    					<h2>
-                            Commands
-                            <span class="help_popup">[?]</span>
-                        </h2>
+						<div id="pick-settings-filled" class="flex-item">
+							<h2>
+								Commands
+								<span class="help_popup">[?]</span>
+							</h2>
 
-    					<ul>
-                            <li>
-    							<a href="#" class="btn-square orange"><i class="fa fa-align-justify"></i></a>
-    							sudo apt-get install nodejs
-    							<a href="#" class="btn-square orange"><i class="fa fa-remove"></i></a>
-    						</li>
-                            <li>
-    							<a href="#" class="btn-square orange"><i class="fa fa-align-justify"></i></a>
-    							sudo apt-get install nodejs
-    							<a href="#" class="btn-square orange"><i class="fa fa-remove"></i></a>
-    						</li>
-                            <li>
-    							<a href="#" class="btn-square orange"><i class="fa fa-align-justify"></i></a>
-    							sudo apt-get install nodejs
-    							<a href="#" class="btn-square orange"><i class="fa fa-remove"></i></a>
-    						</li>
-                            <li>
-    							<a href="#" class="btn-square orange"><i class="fa fa-align-justify"></i></a>
-    							sudo apt-get install nodejs
-    							<a href="#" class="btn-square orange"><i class="fa fa-remove"></i></a>
-    						</li>
-    					</ul>
-                    </div>
-                </div>
-            </section>
+							<ul>
+								<li>
+									<a href="#" class="btn-square orange"><i class="fa fa-align-justify"></i></a> sudo apt-get install nodejs
+									<a href="#" class="btn-square orange"><i class="fa fa-remove"></i></a>
+								</li>
+								<li>
+									<a href="#" class="btn-square orange"><i class="fa fa-align-justify"></i></a> sudo apt-get install nodejs
+									<a href="#" class="btn-square orange"><i class="fa fa-remove"></i></a>
+								</li>
+								<li>
+									<a href="#" class="btn-square orange"><i class="fa fa-align-justify"></i></a> sudo apt-get install nodejs
+									<a href="#" class="btn-square orange"><i class="fa fa-remove"></i></a>
+								</li>
+								<li>
+									<a href="#" class="btn-square orange"><i class="fa fa-align-justify"></i></a> sudo apt-get install nodejs
+									<a href="#" class="btn-square orange"><i class="fa fa-remove"></i></a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</section>
 
-			<!-- Next Button -->
-			<a href="builder-step-4.html" class="btn orange">Next ></a>
-		</div>
+				<!-- Next Button -->
+				<a href="builder-step-4.html" class="btn orange">Next ></a>
+			</div>
 
-		<div class="clear"></div>
-	</section>
-</div>
+			<div class="clear"></div>
+		</section>
+	</div>
 
 	<footer>
 		<div class="container">
@@ -150,5 +150,6 @@
 			</div>
 		</div>
 	</footer>
-	</body>
+</body>
+
 </html>
