Work on responsiveness

--- a/design/app/index.html
+++ b/design/app/index.html
@@ -132,7 +132,7 @@
 			<div class="spacer"></div>
 
 			<div class="row">
-				<div class="col-md-6 align-right">
+				<div class="col-md-6">
 					<div class="plan">
 						<p class="title">Personal</p>
 						<p class="subtitle">One developer</p>
@@ -169,7 +169,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-6 align-left">
+				<div class="col-md-6">
 					<div class="plan">
 						<p class="title">Organization</p>
 						<p class="subtitle">Multiple developers</p>
