Work on the react components and setup

--- a/design/app/builder-step-1.html
+++ b/design/app/builder-step-1.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+
+<div class="wrapper">
 	<header class="small">
 		<nav>
 			<div class="container">
@@ -25,8 +27,6 @@
 			</div>
 		</nav>
 	</header>
-
-	<div class="wrapper">
 		<section class="sub-menu">
 			<h1><a href="#"><i class="fa fa-bars"></i><span>Brewr</span></a></h1>
 
@@ -144,7 +144,6 @@
 
 			<div class="clear"></div>
 		</section>
-	</div>
 
 	<footer>
 		<div class="container">
@@ -172,7 +171,7 @@
 				<a href="#" class="circle"><i class="fa fa-github"></i></a>
 			</div>
 		</div>
-	</footer>
+	</footer>	</div>
 </body>
 
 </html>
