--- a/design/app/builder-step-7.html
+++ b/design/app/builder-step-7.html
@@ -28,40 +28,39 @@
 
 	<div class="wrapper">
 		<section class="sub-menu">
-			<h1><a href="#"><i class="fa fa-bars"></i>Brewr</a></h1>
+			<h1><a href="#"><i class="fa fa-bars"></i><span>Brewr</span></a></h1>
 
 			<ul>
 				<li>
-					<a href="#"><i class="fa fa-home"></i>Dashboard</a>
+					<a href="#"><i class="fa fa-home"></i><span>Dashboard</span></a>
 				</li>
 
 				<li>
-					<a href="#"><i class="fa fa-group"></i>Teams</a>
+					<a href="#"><i class="fa fa-group"></i><span>Teams</span></a>
 				</li>
 
 				<li class="second-level">
 					<a href="#">
-						<i class="fa fa-folder"></i>Projects
+						<i class="fa fa-folder"></i><span>Projects</span>
 						<i class="fa fa-caret-down item-dropdown"></i>
 					</a>
 
 					<div class="clear"></div>
 
 					<ul>
-						<li><a href="#">Google Inbox</a></li>
-						<li><a href="#">Google Analytics</a></li>
-						<li><a href="#">Google Drive</a></li>
+						<li><a href="#"><span>Google Inbox</span></a></li>
+						<li><a href="#"><span>Google Analytics</span></a></li>
+						<li><a href="#"><span>Google Drive</span></a></li>
 					</ul>
 				</li>
 				<li class="active">
-					<a href="#"><i class="fa fa-gears"></i>Image Creator</a>
+					<a href="#"><i class="fa fa-gears"></i><span>Image Creator</span></a>
 				</li>
 				<li>
-					<a href="#"><i class="fa fa-lock"></i>Admin</a>
+					<a href="#"><i class="fa fa-lock"></i><span>Admin</span></a>
 				</li>
 			</ul>
 		</section>
-
 
 		<section class="page-title">
 			<h1>Image Builder
