Design ported to react

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,6 +5,8 @@
   <title>Document</title>
   <link rel="stylesheet" href="styles/vendor/normalize.css/normalize.css">
   <link rel="stylesheet" href="styles/vendor/font-awesome/font-awesome.css">
+  <link rel="stylesheet" href="styles/vendor/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="styles/vendor/bootstrap/bootstrap-theme.min.css">
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
