New development workflow

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
@@ -9,8 +10,11 @@
   <link rel="stylesheet" href="styles/vendor/bootstrap/bootstrap-theme.min.css">
   <link rel="stylesheet" href="styles/main.css">
 </head>
+
 <body>
-  <!-- Flux goes here -->
-  <script src="js/index.js"></script>
+  <script src="http://localhost:8080/webpack-dev-server.js"></script>
+  <script type="text/javascript" src="vendors.js"></script>
+  <script type="text/javascript" src="bundle.js"></script>
 </body>
+
 </html>
