--- a/frontend/src/index.tpl.html
+++ b/frontend/src/index.tpl.html
@@ -7,6 +7,8 @@
     <title>react-kickstart</title>
     <meta name="description" content="just another react + webpack boilerplate">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure.css" media="screen" title="no title" charset="utf-8"> -->
 </head>
 
 <body>
